--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,10 @@ dependencies:
   graphview: ^1.1.1
   path_provider: ^2.0.10
   provider: ^6.0.2
+  file_picker: ^4.5.1
+  fluttertoast: ^8.0.9
+  shared_preferences: ^2.0.15
+  font_awesome_flutter: ^10.1.0
   window_size:
     git:
       url: https://github.com/google/flutter-desktop-embedding.git
